--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,15 @@
   pointer-events: none;
   transition: transform 0.4s ease-in-out;
 }
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
